fix(link): add spacing with external icon + set outline border inverse color in dark mode

--- a/packages/react/src/components/link/Link.module.scss
+++ b/packages/react/src/components/link/Link.module.scss
@@ -69,7 +69,7 @@
             &:focus-visible {
                 color: var(--content-primary-inverse);
                 text-decoration: underline;
-                outline: 1px solid var(--border-brand-focused);
+                outline: 1px solid var(--border-inverse);
                 outline-offset: $radius-s;
                 border-radius: $radius-s;
             }
@@ -138,10 +138,15 @@
             &:focus-visible {
                 color: var(--content-primary-inverse);
                 text-decoration: underline;
-                outline: 1px solid var(--border-brand-focused);
+                outline: 1px solid var(--border-inverse);
                 outline-offset: $radius-s;
                 border-radius: $radius-s;
             }
         }
+    }
+
+    .external-link-icon {
+        align-self: start;
+        margin-left: $positive-spacing_025;
     }
 }
